[gd_scene load_steps=5 format=2]

[ext_resource path="res://Generator/Generator.gd" type="Script" id=1]
[ext_resource path="res://Generator/Rigs/Rig.tscn" type="PackedScene" id=2]
[ext_resource path="res://Battle/Interface/CharacterInfo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Generator/Stat.tscn" type="PackedScene" id=4]

[node name="Generator" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 590.25
margin_top = 81.8169
margin_right = 673.25
margin_bottom = 149.817
__meta__ = {
"_edit_group_": true
}

[node name="Back" type="Button" parent="VBoxContainer"]
margin_right = 83.0
margin_bottom = 20.0
text = "Back"

[node name="Front" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 83.0
margin_bottom = 44.0
text = "Front"

[node name="Randomize" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 83.0
margin_bottom = 68.0
text = "Randomize"

[node name="Rig" parent="." instance=ExtResource( 2 )]
position = Vector2( 532.479, 173.253 )
scale = Vector2( 0.5, 0.5 )

[node name="CharacterInfo" parent="." instance=ExtResource( 3 )]
margin_left = 768.152
margin_top = 180.894
margin_right = 862.152
margin_bottom = 294.894

[node name="Stats" type="VBoxContainer" parent="."]
margin_left = 742.197
margin_top = 303.892
margin_right = 902.197
margin_bottom = 371.892

[node name="Acuity" parent="Stats" instance=ExtResource( 4 )]
margin_right = 160.0
margin_bottom = 20.0

[node name="Constitution" parent="Stats" instance=ExtResource( 4 )]
margin_top = 24.0
margin_right = 160.0
margin_bottom = 44.0

[node name="Agility" parent="Stats" instance=ExtResource( 4 )]
margin_top = 48.0
margin_right = 160.0
margin_bottom = 68.0

[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="VBoxContainer/Front" to="." method="_on_Front_pressed"]
[connection signal="pressed" from="VBoxContainer/Randomize" to="." method="_on_Randomize_pressed"]
